feat: add accordion

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "p-static": "npx http-server dist -a 127.0.0.1 -p 3001"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
