--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "d": "vite --open",
     "b": "vite build",
+    "f": "prettier -w -l .",
     "p": "vite preview",
     "p-static": "npx http-server dist -a 127.0.0.1 -p 3001"
   },
@@ -44,6 +45,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
     "vite": "^6.0.3"
