--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-router": "^7.0.2",
     "recharts": "^2.14.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
