--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
