--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
+    "react-resizable-panels": "^2.1.7",
     "react-router": "^7.0.2",
     "recharts": "^2.14.1",
     "tailwind-merge": "^2.5.5",
