--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "type": "module",
-  "packageManager": "pnpm@10.4.0",
+  "packageManager": "pnpm@10.7.1",
   "scripts": {
-    "d": "vite --open",
+    "d": "vite",
     "b": "vite build",
-    "f": "prettier -w -l .",
-    "p": "pnpx http-server dist -a 127.0.0.1 -p 3001"
+    "p": "pnpx http-server dist -a localhost -p 5173"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.2",
+    "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -36,36 +35,36 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-table": "^8.21.2",
-    "@types/node": "^22.13.8",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.5.2",
+    "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.477.0",
-    "next-themes": "^0.4.4",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.2",
+    "next-themes": "^0.4.6",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "react": "^19.0.0",
-    "react-day-picker": "^9.5.1",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react": "^19.1.0",
+    "react-day-picker": "^9.6.4",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
-    "react-router": "^7.2.0",
-    "recharts": "^2.15.1",
-    "sonner": "^2.0.1",
+    "react-router": "^7.5.0",
+    "recharts": "^2.15.2",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.8.2",
+    "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.5",
+    "typescript": "^5.8.3",
     "vaul": "^1.1.2",
-    "vite": "^6.2.0",
+    "vite": "^6.2.5",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.3",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
+    "@vitejs/plugin-react": "^4.3.4"
   }
 }
