--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "scripts": {
     "d": "vite",
     "b": "vite build",
-    "p": "pnpx http-server dist -a localhost -p 5173"
+    "p": "pnpx http-server dist -a localhost -p 5173",
+    "f": "prettier . -l --write"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.3",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
@@ -41,7 +43,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.1.0",
@@ -52,7 +54,7 @@
     "react-router": "^7.5.0",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
     "typescript": "^5.8.3",
